updated intellij settings, added flymake.css